MFC r258901:

svn r251516 resized the buf argument a bit too much. Pass a hardcoded
size of 6 to humanize_number() to resolve this.

PR:     bin/184405
Submitted by:   jhb

Former-commit-id: 96f6acf908765358cf7630950b92db07f7da403e