usr.sbin/mfiutil/mfi_show.c
@@ -1714,10 +1714,7 @@ name|humanize_number
 argument_list|(
 name|buf
 argument_list|,
-sizeof|sizeof
-argument_list|(
-name|buf
-argument_list|)
+literal|6
 argument_list|,
 name|info
 operator|->
